# jcu-bson-serializable

./: .gitignore  CMakeLists.txt
cmake/: FindRapidJSON.cmake
include/jcu-bson-serializable/: serializable.h
include/jcu-bson-serializable/plugins/: JSONObjectMapper.h
src/: jcu-bson-serializable-config.h.in  serializable.cpp
src/plugins/: JSONObjectMapper.cpp
